Update position-parameters.ts
